[package]
name = "my-json0"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"

[dependencies]
crc = "3.0.0"
itertools = "0.11.0"
serde_json = "1.0.96"
serde = "1.0.164"
walkdir = "2.3.2"
bytes = "1.3.0"
thiserror = "1.0.38"
dashmap = "5.4.0"
base64 = "0.21.0"
log = "0.4.17"
fs2 = "0.4.3"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
uuid = { version = "1.3.3", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

[dev-dependencies]
test-log = "0.2.11"
assert_matches = "1.5.0"
env_logger = "*"
mockall = "0.11.4"
