[package]
name = "json0-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JSON0 OT implement in rust."

[[test]]
name = "integration"

[dependencies]
itertools = "0.11.0"
serde_json = "1.0.96"
serde = "1.0.164"
thiserror = "1.0.38"
dashmap = "5.4.0"
log = "0.4.17"

[dev-dependencies]
test-log = "0.2.11"
assert_matches = "1.5.0"
env_logger = "0.9.3"
